Fixed bug #44686 (SOAP-ERROR: Parsing WSDL with references)